--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -31,6 +31,7 @@
         "matches": ["<all_urls>"],
         "js": [
             "/js/jquery-3.1.1.min.js",
+            "/js/contentscript/components/database.js",
             "/js/contentscript/components/extract-text.js",
             "/js/contentscript/contentscript.js"
         ],
