--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -32,6 +32,7 @@
         "js": [
             "/js/jquery-3.1.1.min.js",
             "/js/contentscript/components/database.js",
+            "/js/contentscript/components/replace-text.js",
             "/js/contentscript/components/extract-text.js",
             "/js/contentscript/contentscript.js"
         ],
