--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -29,6 +29,7 @@
 
     "content_scripts": [{
         "matches": ["<all_urls>"],
+        "css" : ["/css/content.css"],
         "js": [
             "/js/jquery-3.1.1.min.js",
             "/js/contentscript/components/database.js",
