--- a/depolitics/app.yaml
+++ b/depolitics/app.yaml
@@ -9,6 +9,8 @@ runtime_config:
 handlers:
   - url: /static
     static_dir: static
+    
   - url: .*
     script: depolitics.wsgi.application
+    secure: always
 # [END runtime]
