--- a/depolitics/app.yaml
+++ b/depolitics/app.yaml
@@ -6,6 +6,9 @@ entrypoint: gunicorn -b :$PORT depolitics.wsgi
 runtime_config:
     python_version: 3
 
+beta_settings:
+    cloud_sql_instances: depolitics-org:us-central1:depolitics-org
+
 handlers:
   - url: /static
     static_dir: static
