--- a/depolitics.org/config/nginx/mydjango.conf
+++ b/depolitics.org/config/nginx/mydjango.conf
@@ -17,3 +17,9 @@ server {
     listen 8000;
     server_name localhost;
 }
+
+server {
+    listen 80;
+    server_name www.depolitics.org;
+    return 301 $scheme://depolitics.org$request_uri;
+}
