--- a/depolitics.org/docker-compose.yml
+++ b/depolitics.org/docker-compose.yml
@@ -37,6 +37,8 @@ services:
 
   db:
     image: postgres:latest
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
     expose:
       - 5432
 
