--- a/depolitics.org/docker-compose.yml
+++ b/depolitics.org/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - "8000"
 
   db:
-    image: postgres:latest
+    image: postgres:10
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     expose:
