--- a/depolitics.org/config/nginx/mydjango.conf
+++ b/depolitics.org/config/nginx/mydjango.conf
@@ -18,7 +18,7 @@ server {
     server_name localhost;
 }
 
-server {
-    server_name www.depolitics.org;
-    return 301 $scheme://depolitics.org$request_uri;
-}
+# server {
+#     server_name www.depolitics.org;
+#     return 302 https://depolitics.org$request_uri;
+# }
